LOG2990-53 fixed layout bug in chrome

--- a/client/src/app/components/pages/editor/toolbar/toolbar.component.scss
+++ b/client/src/app/components/pages/editor/toolbar/toolbar.component.scss
@@ -38,18 +38,20 @@
   border: 1px solid $accent;
   height: 35px;
   width: 35px;
-  position: absolute;
   z-index: 1000;
-  margin-bottom: 10px;
-  margin-right: 8px;
+  position: absolute;
+  bottom: 160px;
+  right: 15px;
 }
 
 #toolbar-secondary-color {
   border: 1px solid $accent;
   height: 35px;
   width: 35px;
+  z-index: 500;
   position: absolute;
-  margin-left: 8px;
+  bottom: 150px;
+  left: 15px;
 }
 
 button {
